# h-memory-mcp-server

./: .gitignore  CLAUDE.md  README.md  claude_mcp_config.json  main.py  mise.toml  pyproject.toml  test_memories.json
.github/workflows/: ci.yml
src/: __init__.py  memory_store.py  models.py  server.py
tests/: __init__.py  conftest.py  test_memory_store.py  test_models.py  test_server.py
